<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.iteso.android_tarea6.ActivityLogin"
    android:padding="@dimen/activity_vertical_margin">

    <EditText
        android:id="@+id/activity_username_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_username_hint" />

    <EditText
        android:id="@+id/activity_password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_password_hint" />

    <Button
        android:id="@+id/activity_login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_login_string"
        />

</LinearLayout>